--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -1685,6 +1685,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUSPECT ADVERSE REACTION REPORT\n",
+      "1 PATIENT INITIALS first last\n",
+      "1a COUNTRY\n",
+      "2_DateOfBirth\n",
+      "2a AGE Years\n",
+      "3_Sex\n",
+      "4_ReactionOnset\n",
+      "7  13 DESCRIBE REACTIONS including relevant testslab data\n",
+      "PatientDied\n",
+      "InpatientHospitalisation\n",
+      "Persistence_Incapacity\n",
+      "LifeThreatening\n",
+      "14_SuspectDrugs\n",
+      "YES\n",
+      "NO\n",
+      "NA\n",
+      "15_DailyDoses\n",
+      "16_RoutesOfAdmin\n",
+      "17_IndicationsForUse\n",
+      "S\n",
+      "NO\n",
+      "NA\n",
+      "18_TherapyFrom\n",
+      "18_TherapyTo\n",
+      "19_TherapyDuration\n",
+      "22 CONCOMITANT DRUGS AND DATES OF ADMINISTRATION exclude those used to treat reaction\n",
+      "23 OTHER RELEVANT HISTORY eg diagnostics allergies pregnancy with last month of period etc\n",
+      "24A_NameOfManufacturer\n",
+      "24a  ADDRESS OF MANUFACTURER\n",
+      "24b MFR CONTROL NO\n",
+      "24_ManufacturerDetails\n",
+      "24c DATE RECEIVED BY MANUFACTURER\n",
+      "DATE OF THIS REPORT\n",
+      "24d_Study\n",
+      "24d_HealthProfessional\n",
+      "24d_Literature\n",
+      "JINITIAL\n",
+      "‘FOLLOWUP\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "# import os\n",
+    "import json\n",
+    "import io\n",
+    "import pytesseract\n",
+    "from PIL import Image\n",
+    "\n",
+    "pdf_path = r\"C:\\Users\\USER\\Downloads\\Fillable-Form_CIOMS-to-E2B.pdf\"\n",
+    "doc = pymupdf.open(pdf_path)\n",
+    "\n",
+    "dict_data = {}\n",
+    "\n",
+    "json_file = open('dict_data.json', 'w')\n",
+    "for page in doc:\n",
+    "    widgets = page.widgets()\n",
+    "    if widgets:\n",
+    "        for widget in widgets:\n",
+    "            if widget.field_type_string == 'RadioButton':\n",
+    "                bounding_box = widget.rect\n",
+    "                increase_amount = 20\n",
+    "                new_bounding_box = pymupdf.Rect(bounding_box.x0 + 14, bounding_box.y0 + 3,\n",
+    "                                            bounding_box.x1 + increase_amount*2, bounding_box.y1)\n",
+    "                zoom_x = 9.0\n",
+    "                zoom_y = 8.0\n",
+    "                mat = pymupdf.Matrix(zoom_x, zoom_y)\n",
+    "                pix = page.get_pixmap(matrix=mat, clip=new_bounding_box)\n",
+    "\n",
+    "                # Convert pixmap to PIL image\n",
+    "                img = Image.open(io.BytesIO(pix.tobytes(\"png\")))\n",
+    "\n",
+    "\n",
+    "                text = pytesseract.image_to_string(img)\n",
+    "                required_text = text.split()[0]\n",
+    "                print(required_text)\n",
+    "\n",
+    "                dict_data[f\"{widget.field_name}_{required_text}\"] = widget.field_name\n",
+    "\n",
+    "                continue\n",
+    "            print(widget.field_name)\n",
+    "            dict_data[widget.field_name] = widget.field_name\n",
+    "\n",
+    "json.dump(dict_data, json_file, indent=4)\n",
+    "\n",
+    "json_file.close()\n",
+    "\n",
+    "doc.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
